# adventofcode2022

./: Cargo.toml  README.md  justfile
.github/workflows/: solutions.yml  tests.yml
src/: day.1.1.rs  day.1.2.rs  day.1.rs  day.10.1.rs  day.10.2.rs  day.11.1.rs  day.11.2.rs  day.2.1.rs  day.2.2.rs  day.25.1.rs  day.3.1.rs  day.3.2.rs  day.4.1.rs  day.4.2.rs  day.5.1.rs  day.5.2.rs  day.6.1.rs  day.6.2.rs  day.7.1.rs  day.7.2.rs  day.8.1.rs  day.8.2.rs  day.9.1.rs  day.9.2.rs  day_1.rs  day_10.rs  day_11.rs  day_2.rs  day_25.rs  day_3.rs  day_4.rs  day_5.rs  day_6.rs  day_7.rs  day_8.rs  day_9.rs
src/day_9/: impls.rs  mod.rs  traits.rs  types.rs
