[package]
name = "adventofcode2022"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day-1-1"
path = "src/day.1.1.rs"

[[bin]]
name = "day-1-2"
path = "src/day.1.2.rs"

[[bin]]
name = "day-2-1"
path = "src/day.2.1.rs"

[[bin]]
name = "day-2-2"
path = "src/day.2.2.rs"

[[bin]]
name = "day-3-1"
path = "src/day.3.1.rs"

[[bin]]
name = "day-3-2"
path = "src/day.3.2.rs"

[[bin]]
name = "day-4-1"
path = "src/day.4.1.rs"

[[bin]]
name = "day-4-2"
path = "src/day.4.2.rs"

[[bin]]
name = "day-5-1"
path = "src/day.5.1.rs"

[[bin]]
name = "day-5-2"
path = "src/day.5.2.rs"

[[bin]]
name = "day-6-1"
path = "src/day.6.1.rs"

[[bin]]
name = "day-6-2"
path = "src/day.6.2.rs"

[[bin]]
name = "day-7-1"
path = "src/day.7.1.rs"

[[bin]]
name = "day-7-2"
path = "src/day.7.2.rs"

[[bin]]
name = "day-8-1"
path = "src/day.8.1.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
ndarray = "0.15.6"
regex = "1.7.0"
